--- a/view/index.html
+++ b/view/index.html
@@ -1,5 +1,6 @@
 <div class="container">
     <div class="panel-body">
         <h1>Bienvenue sur le blog !</h1>
+        <h3>Derniers posts publiés :</h3>
     </div>
 </div>
