--- a/view/index.html
+++ b/view/index.html
@@ -1,6 +1,19 @@
+<style>
+    article{
+        padding: 1.5em 4em;
+        background-color: #eeeeee;
+    }
+</style>
 <div class="container">
     <div class="panel-body">
         <h1>Bienvenue sur le blog !</h1>
-        <h3>Derniers posts publiés :</h3>
+        <section>
+            <h2>Derniers posts publiés :</h2>
+            <article>
+                <h3>BLBLBLBLBLBL</h3>
+                <p>blblblblblbllblblblblbllblblblbl</p>
+            </article>
+        </section>
+
     </div>
 </div>
